--- a/_sources/tutorials/adaptive_distances.ipynb
+++ b/_sources/tutorials/adaptive_distances.ipynb
@@ -148,21 +148,21 @@
     "\n",
     "# Euclidean (default)\n",
     "S_euclidean, w_euclidean, info_euclidean = fit_ddc_coreset(\n",
-    "    X, k=k, mode='euclidean', preset='balanced', random_state=RANDOM_STATE\n",
+    "    X, k=k, random_state=RANDOM_STATE\n",
     ")\n",
     "print(f\"\u2713 Euclidean: {len(S_euclidean)} representatives\")\n",
     "print(f\"  Pipeline: {info_euclidean['pipeline']}\")\n",
     "\n",
     "# Adaptive\n",
     "S_adaptive, w_adaptive, info_adaptive = fit_ddc_coreset(\n",
-    "    X, k=k, mode='adaptive', preset='balanced', random_state=RANDOM_STATE + 1\n",
+    "    X, k=k, random_state=RANDOM_STATE + 1\n",
     ")\n",
     "print(f\"\u2713 Adaptive: {len(S_adaptive)} representatives\")\n",
     "print(f\"  Pipeline: {info_adaptive['pipeline']}\")\n",
     "\n",
     "# Auto (should choose adaptive for d=15)\n",
     "S_auto, w_auto, info_auto = fit_ddc_coreset(\n",
-    "    X, k=k, mode='auto', preset='balanced', random_state=RANDOM_STATE + 2\n",
+    "    X, k=k, random_state=RANDOM_STATE + 2\n",
     ")\n",
     "print(f\"\u2713 Auto: {len(S_auto)} representatives\")\n",
     "print(f\"  Pipeline: {info_auto['pipeline']}\")\n",
@@ -189,7 +189,7 @@
     "\n",
     "for preset in presets:\n",
     "    S, w, info = fit_ddc_coreset(\n",
-    "        X, k=k, mode='adaptive', preset=preset, random_state=RANDOM_STATE + 10\n",
+    "        X, k=k, random_state=RANDOM_STATE + 10\n",
     "    )\n",
     "    results_presets[preset] = {\n",
     "        'S': S, 'w': w, 'info': info,\n",
