--- a/_sources/tutorials/high_dimensional.ipynb
+++ b/_sources/tutorials/high_dimensional.ipynb
@@ -132,7 +132,7 @@
     "# Euclidean (no PCA, works but slower)\n",
     "start = time.time()\n",
     "S_euclidean, w_euclidean, info_euclidean = fit_ddc_coreset(\n",
-    "    X, k=k, mode='euclidean', preset='balanced', random_state=RANDOM_STATE\n",
+    "    X, k=k, random_state=RANDOM_STATE\n",
     ")\n",
     "time_euclidean = time.time() - start\n",
     "print(f\"\u2713 Euclidean: {len(S_euclidean)} representatives\")\n",
@@ -142,7 +142,7 @@
     "# Auto (should trigger PCA)\n",
     "start = time.time()\n",
     "S_auto, w_auto, info_auto = fit_ddc_coreset(\n",
-    "    X, k=k, mode='auto', preset='balanced', random_state=RANDOM_STATE + 1\n",
+    "    X, k=k, random_state=RANDOM_STATE + 1\n",
     ")\n",
     "time_auto = time.time() - start\n",
     "print(f\"\u2713 Auto: {len(S_auto)} representatives\")\n",
